fix: update line-height for anchor tags in general styles to improve text readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -169,7 +169,7 @@ a:active {
 	font-size: 14px;
 	font-style: italic;
 	font-weight: 700;
-	line-height: 1.3;
+	line-height: 1.4;
 }
 
 .wp-caption-text {
